--- a/index.html
+++ b/index.html
@@ -5,8 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MY PORTFOLIO</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    
+    <nav>
+        <div class="brand">
+            <h1><span>O</span>LADIPO <span>A</span>NJOLA</h1>
+        </div>
+       <input type="checkbox" id="check">
+        <ul class="nav-wrapper">
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Services</a></li>
+            <li><a href="">Projects</a></li>
+            <li><a href="">Contact</a></li>
+            <label for="check" class="close"><i class="fa-solid fa-xmark"></i></label>
+        </ul>
+        <label for="check" class="open"><i class="fa-solid fa-bars"></i></label>
+    </nav>
 </body>
 </html>
