--- a/index.html
+++ b/index.html
@@ -21,11 +21,24 @@
             <li><a href="">Home</a></li>
             <li><a href="">About</a></li>
             <li><a href="">Services</a></li>
-            <li><a href="">Projects</a></li>
             <li><a href="">Contact</a></li>
             <label for="check" class="close"><i class="fa-solid fa-xmark"></i></label>
         </ul>
         <label for="check" class="open"><i class="fa-solid fa-bars"></i></label>
     </nav>
+    <section class="intro">
+        <div class="intro-container">
+            <p><span>Hi There...</span</p>
+            <h1>I AM <span>OLADIPO ANJOLA</span></h1>
+            <h3>A Front-End Web Developer</h3>
+            <p>In the realm of design, creativity is the heartbeat of every project. My work is a reflection of <br>
+        my passion for innovation and my commitment to crafting unique solutions. Each piece I create <br>
+        is born from a desire to explore new ideas and push the boundaries of conventional design. <br>
+        I believe that creativity is not just about aesthetics; it is about telling a story and evoking <br>
+        emotion. Join me in discovering how my artistic vision transforms concepts into captivating realities.</p>
+            <div class="image"><img src="images/IMG_20211120_154131.jpg" alt=""></div>
+            <button><a href="">About Me</a></button>
+        </div>
+    </section>
 </body>
 </html>
