--- a/index.html
+++ b/index.html
@@ -31,11 +31,10 @@
             <p><span>Hi There...</span</p>
             <h1>I AM <span>OLADIPO ANJOLA</span></h1>
             <h3>A Front-End Web Developer</h3>
-            <p>In the realm of design, creativity is the heartbeat of every project. My work is a reflection of <br>
-        my passion for innovation and my commitment to crafting unique solutions. Each piece I create <br>
-        is born from a desire to explore new ideas and push the boundaries of conventional design. <br>
-        I believe that creativity is not just about aesthetics; it is about telling a story and evoking <br>
-        emotion. Join me in discovering how my artistic vision transforms concepts into captivating realities.</p>
+            <p>Over The Years, I've Being Able To Gather Enough <br>
+            Knowledge And Experience <br>
+        In Web Design And Development, Thereby Producing <br>
+    Quality Work And Completing Lots Of Projects</p>
             <div class="image"><img src="images/IMG_20211120_154131.jpg" alt=""></div>
             <button><a href="">About Me</a></button>
         </div>
