--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             Knowledge And Experience <br>
         In Web Design And Development, Thereby Producing <br>
     Quality Work And Completing Lots Of Projects</p>
-            <div class="image"><img src="images/IMG_20211120_154131.jpg" alt=""></div>
+            <div class="image"><img src="images/WhatsApp Image 2024-11-15 at 02.43.50.jpeg" alt=""></div>
             <button><a href="">About Me</a></button>
         </div>
     </section>
