--- a/index.html
+++ b/index.html
@@ -39,5 +39,39 @@
             <button><a href="">About Me</a></button>
         </div>
     </section>
+
+    <section class="services">
+        <div class="services-container">
+
+        <div class="services-intro"><h1>SER<span>VI</span>CES</h1></div>
+        <h3>Creating Digital Experiences</h3>
+        <div class="services-grid">
+            <div class="services-item">
+                <img src="images/android.jfif" alt="">
+                <h4>App Development</h4>
+                <p>I Created A Dynamic Mobile App <br>That Enhances Daily Life By Solving <br>A specific Problem Or Need, <br>Offering Users A Seamless And <br> Efficient Solution</p>
+            </div>
+
+            <div class="services-item">
+                <img src="images/web.png" alt="">
+                <h4>Web Development</h4>
+                <p>I'm A Web Developer Who crafts <br>User-Friendly Websites With Clean  <br>Designs And Responsive Layouts, <br>Ensuring An Optimal Online <br>Experience For Visitors.</p>
+            </div>
+
+            <div class="services-item">
+                <img src="images/canva.png" alt="">
+                <h4>Graphics Design</h4>
+                <p>I'm A Graphics Designer Who Brings  <br>Ideas To Life Through Visually <br> Stunning And Creative Designs, <br> Adding A Touch Of Artistry To <br>Various Projects.</p>
+            </div>
+
+            <div class="services-item">
+                <img src="images/instructor.png" alt="">
+                <h4>Tech Instructor</h4>
+                <p>I'm A Tech Instructor Dedicated To <br>Empowering Learners with Practical <br> Knowledge And Skills,<br>Enabling Them To Excel In The <br>Digital World.</p>
+            </div>
+        </div>
+        
+        </div>
+    </section>
 </body>
 </html>
