--- a/index.html
+++ b/index.html
@@ -71,6 +71,35 @@
             </div>
         </div>
         
+     </div>
+    </section>
+
+    <section id="contact">
+
+        <div class="contact-section">
+            <div class="contact-info">
+                <p>DO YOU HAVE A QUESTION TO ASK?</p>
+                <h1>Let's Talk</h1>
+                <p><i class="fab fa-whatsapp"></i>WhatsApp: +234 802 780 0993</p>
+                <p><i class="fas fa-phone"></i>Phone: +234 802 780 0993</p>
+                <p><i class="far fa-envelope"></i>Email: Oladipoajbaby@gmail.com</p>
+            </div>
+
+            <div class="contact-form">
+                <form action="submit_form_php" method="post">
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" required>
+
+                    <label for="name">Email:</label>
+                    <input type="email" id="email" name="email" required>
+
+                   <label for="message">Message:</label>
+                   <textarea name="message" id="message" rows="4" required></textarea>
+
+                  <button class="tweet-button">Submit</button>
+
+                </form>
+            </div>
         </div>
     </section>
 </body>
