--- a/index.html
+++ b/index.html
@@ -102,5 +102,53 @@
             </div>
         </div>
     </section>
+    <!-- footer -->
+     <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="column">
+                    <h5>Aj-tech Enterprise</h5>
+                    <p>Providing reliable services since early 20s.</p>
+                    <p>Contact: Ajtech.org</p>
+                </div>
+
+                <div class="column">
+                    <h5>Company</h5>
+                    <ul>
+                        <li><a href="">About Us</a></li>
+                        <li><a href="">Career</a></li>
+                        <li><a href="">Press</a></li>
+                    </ul>
+                </div>
+
+                <div class="column">
+                    <h5>Support</h5>
+                    <ul>
+                        <li><a href="">Help Center</a></li>
+                        <li><a href="">Contact Us</a></li>
+                        <li><a href="">FAQs</a></li>
+                    </ul>
+                </div>
+
+                <div class="column">
+                    <h5>Follow Us</h5>
+                    <ul class="social-links">
+                        <li><a href="#"><i class="fab fa-facebook-f"></i> Facebook</a></li>
+                        <li><a href="#"><i class="fab fa-twitter"></i> Twitter</a></li>
+                        <li><a href="#"><i class="fab fa-linkedin-in"></i> Linkedin</a></li>
+                        <li><a href="#"><i class="fab fa-instagram"></i> Instagram</a></li>
+                    </ul>
+                </div>
+
+                
+            </div>
+
+            <div class="row">
+                <div class="text-center">
+                    <p>&copy; 2024 Aj-tech Enterprise. All rights reserved.</p>
+                </div>
+            </div>
+        </div>
+     </footer>
 </body>
 </html>
