--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
             </div>
         </div>
     </section>
+
+    <a href="https://wa.me/message/IRGXEHLDD3TWE1" target="_blank" title="chat us on whatsapp" class="whatsapp-float">
+      <i class="fa-brands fa-whatsapp"></i>
+    </a>
     <!-- footer -->
      <footer class="footer">
         <div class="container">
